--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,29 +22,44 @@
    
  }
 
+
+ .card-text{
+   position: relative;
+ }
+
+ 
+
  .S2-card-title{
-   
+   position: relative;
+   top: 80px;
+   left: 80px;
     width: 500px;
-    padding-top: 100px;
-    padding-left:  50px;
+   
     color: black;
-    font-size: 40px;
+    font-size: 50px;
  }
 
  .S2-card-text{
+   position: absolute;
+   top: 220px;
+   left: 90px;
     color: black;
-    font-size: 20px;
+    font-size: 30px;
     
-   padding: 10px 50px;
+   
  }
 
 .S2-BTN{
+
+   position: absolute;
+   top: 270px;
+   left: 90px;
     background-color: #0d6efd;
     color: white;
     padding: 8px 14px;
     border-radius: 6px;
     border: none;
-    margin-left: 50px;
+   
 }
 
 
@@ -120,8 +135,9 @@
 
    
 
-@media ((max-width: 767.98px))
- 
+@media (min-width: 575.98px) and (max-width: 991.98px) 
+
+
 
 {.footer-inner .container{
    
@@ -140,7 +156,36 @@
    list-style-type: none;
    display: block;
 }
+.S2-card-title{
+  position: absolute;
+  top: 10px;
+  left: 10px;
+   font-size: 30px;
+ }
+
+ .S2-card-text{
+position: absolute;
+top: 50px;
+left: 10px;
+  
+    font-size: 16px;
+    
    
+ }
+
+ .S2-BTN{
+
+   position: absolute;
+   top: 80px;
+   left: 10px;
+    background-color: #0d6efd;
+    color: white;
+    padding: 8px 14px;
+    border-radius: 6px;
+    border: none;
+   
+}
+
 }
 
 
